# ai-that-works

./: .gitignore  Makefile  README.md
.prompts/: recap-and-next.md
2025-05-20-policies-to-prompts/: .gitignore  README.md  datasets.py  pipeline.py  pyproject.toml  questions.py  test_pipeline.py
2025-05-20-policies-to-prompts/baml_src/: evaluate_gift_policy.baml  evaluate_policy.baml  questions.baml
2025-05-27-mcp-with-10000-tools/: parse_json_schema.py  pyproject.toml  tools.py
2025-06-03-humans-as-tools-async/: README.md  package-lock.json  package.json
2025-06-10-cracking-the-prompting-interview/: README.md  hello.py  pyproject.toml
2025-06-24-ai-content-pipeline/backend/: ai_generator.py  auth.py  baml_wrapper.py  claude_output.jsonl  database.py  env.template  job_processor.py  main.py  models.py  oauth_setup.py  oauth_setup_claude.py  pyproject.toml  run_migration.py  schema.sql  setup_supabase.py  video_processor.py  zoom_client.py
2025-06-24-ai-content-pipeline/backend/baml_src/: content_generation.baml  email_test.baml  generators.baml  models.baml  resume.baml  summarize.baml  summarize_test.baml
2025-06-24-ai-content-pipeline/backend/migrations/: add_structured_content.sql  add_summary_json.sql
2025-07-15-decaying-resolution-memory/: README.md  examine_threads.py  explore_redis.py  main.py  pyproject.toml  redact_pii.py
2025-07-15-decaying-resolution-memory/baml_src/: extract_date.baml  redact_pii.baml
2025-07-15-decaying-resolution-memory/processed/: thread_1749693363562_nxf6gp.txt  thread_1749694758480_hb0tir.txt
tools/: .env.template  (+3 more)
(+192 files in other folders)
